@@ -4002,6 +4002,7 @@ GEN     serchop0(GEN s);
 GEN     sqrtnint(GEN a, long n);
 GEN     teich(GEN x);
 GEN     teichmullerinit(long p, long n);
+GEN     teichmuller(GEN x, GEN tab);
 GEN     trans_eval(const char *fun, GEN (*f) (GEN, long), GEN x, long prec);
 ulong   upowuu(ulong p, ulong k);
 ulong   usqrtn(ulong a, ulong n);
