@@ -54,3 +54,6 @@ T = x^12 + 208*x^6 + 64; phi = polcyclo(9);
 prec = 10; p = 3;
 v = factorpadic(T, p, prec)[,1];
 liftall( padicappr(phi, Mod(-2+O(p^prec),  v[1])) )
+
+T = teichmuller([17,10]);
+for(i=1,16,if (teichmuller(i+O(17^10),T) != teichmuller(i+O(17^10)), error(i)))
